# binokel

./: README.md  main.py  pyproject.toml
binokel/: card.py  player.py  preparation.py  table.py
