[tool.poetry]
name = "binokel"
version = "0.1.0"
description = "Framework for the card game Binokel"
authors = ["Daniel <daniel.x.zander@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
